<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework Manager</string>
    <string name="action_settings">Settings</string>
    <string name="task_list_view">Task list</string>
    <string name="task_description_field">Description</string>
    <string name="subject_field">Task title</string>
    <string name="add_task_button">Add Task</string>
    <string name="title_activity_task_add">Add Task</string>
    <string name="due_date_heading">Due Date</string>
    <string name="due_date_input">Enter Due date</string>
    <string name="subject_heading">Subject</string>
    <string name="subject_input">Enter Subject</string>
    <string name="description_input" translatable="false">Enter task description</string>
    <string name="description_heading">Task Description</string>
    <string name="delete_tasks_button">Delete all tasks</string>
    <string name="task_done_checkbox">Done</string>
    <string name="database_date_format" translatable="false">dd-MM-yyyy</string>
    <string name="task_title_field">Task Title</string>
    <string name="title_activity_task_details">Edit Task</string>
    <string name="action_delete_task">Delete Task</string>
    <string name="enter_due_date_toast">Enter due date or use back button to discard task</string>
    <string name="database_time_format" translatable="false">HH:mm:ss</string>
    <string name="display_date_format" translatable="false">EEEE, d\'\n\'MMMM y</string>
    <string name="title_activity_setup" translatable="false">Setup</string>
    <string name="add_subject_button">Add Subject</string>
    <string name="edit_timetable_button">Edit Timetable</string>
    <string name="delete">Delete</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_subjects">Edit Subjects</string>
    <string name="title_activity_edit_subjects">Edit Subjects</string>
    <string name="title_activity_subject_edit">Edit Subjects</string>
    <string name="undo_action">Undo</string>
    <string name="item_deleted">1 Deleted</string>
    <string name="camera_unavailable">Your device doesn\'t have a camera</string>
    <string name="cannot_write_photo_to_disk">Can\'t write photo to memory</string>
    <string name="no_subject_selected">No subject selected. If there aren\'t any you can add new ones by selecting \"edit subjects\" in the main screen</string>
    <string name="delete_tasks_confirmation_dialog_title">Are you sure you want to delete all tasks?</string>
    <string name="delete_tasks_confirmation_dialog_text">You can\'t restore them after they have been deleted!</string>
    <string name="image_heading">Photograph</string>
</resources>
