<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="mpardalos.org.homeworkmanager.TaskAdd">

    <android.support.v7.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="mpardalos.org.homeworkmanager.TaskAdd">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject_heading"/>

        <Spinner
            android:id="@+id/subject_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_add_input_seperator_height"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date_heading"/>

        <EditText
            android:id="@+id/due_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/due_date_input"
            android:inputType="date"
            android:onClick="onDueDateClicked"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_add_input_seperator_height"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_heading"/>

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_input"
            android:inputType="textMultiLine"/>


    </LinearLayout>
</LinearLayout>
